--- a/Contacts.html
+++ b/Contacts.html
@@ -9,7 +9,6 @@
 	    <script src="js/login_form.js"></script>
 	    <script src="js/contacts.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
     <body>
      <!--<div style="position:absolute;width:1980px;height:1080px;background:url('images/main.png');opacity: 0.5;margin-left:64px;"></div>-->
@@ -106,7 +105,7 @@
                  	<h2>Будьте в курсе</h2>
                  	<span>Новости, обзоры и акции</span>
                  	<input id="subscription_email" type="text" value="Ваш Email">
-                 	<div>Подписаться</div>
+                 	<a href="#">Подписаться</a>
         		</div>
         	</div>
 
@@ -114,14 +113,23 @@
                 <h2 id="cnt_header">Контактная информация</h2>
                 <div id="cnt_content">
                  	<span class="contacts_h_text">
-					Приезжайте в гости!<br>					Москва,<br>					4-я улица Марьиной Рощи,<br>					 д.12а, 2 этаж, офис №6					</span>
+					Приезжайте в гости!<br>
+					Москва,<br>
+					4-я улица Марьиной Рощи,<br>
+					 д.12а, 2 этаж, офис №6
+					</span>
 
                  	<span class="contacts_h_text">
-					С нетерпением ждем<br>					ваших звонков и писем!<br>					(495) 974-11-28, (495) 600-65-42<br>					9741128@mail.ru, karen1969@list.ru
+					С нетерпением ждем<br>
+					ваших звонков и писем!<br>
+					(495) 974-11-28, (495) 600-65-42<br>
+					9741128@mail.ru, karen1969@list.ru
                  	</span>
 
                  	<span class="contacts_h_text">
-					Будем рады общению с вами <br>					в будние дни с 8-00 до 17-00,<br>					а в субботу с 8-30 до 15-00
+					Будем рады общению с вами <br>
+					в будние дни с 8-00 до 17-00,<br>
+					а в субботу с 8-30 до 15-00
                  	</span>
 
                  	<div class="clear"></div>
@@ -153,7 +161,9 @@
 		<div id="footer_content" class="c_pos">
         	<div id="contact_data" class="contact_data">
            		© MAKnails 2015<br><br>
-                Москва,<br>				4-я улица Марьиной Рощи,<br>				д.12а, 2 этаж, павильон 149
+                Москва,<br>
+				4-я улица Марьиной Рощи,<br>
+				д.12а, 2 этаж, павильон 149
         	</div>
         	<div id="footer" class="footer">
         		<nav>
