--- a/compare.html
+++ b/compare.html
@@ -12,7 +12,6 @@
 	     <script src="js/catalog.js"></script>
 	    <script src="js/catalog_2.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
     <body>	
     	<div id="header_content" class="c_pos">
@@ -108,7 +107,7 @@
                  	<h2>Будьте в курсе</h2>
                  	<span>Новости, обзоры и акции</span>
                  	<input id="subscription_email" type="text" value="Ваш Email">
-                 	<div>Подписаться</div>
+                 	<a href="#">Подписаться</a>
         		</div>
         	</div>
         	<div id="content" class="c_pos_960 080984">
