--- a/dilvery.html
+++ b/dilvery.html
@@ -9,7 +9,6 @@
 	    <script src="js/login_form.js"></script>
 	    <script src="js/news.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
     <body>
      <!--<div style="position:absolute;width:1980px;height:1080px;background:url('images/main.png');opacity: 0.5;margin-left:64px;"></div>-->
@@ -106,7 +105,7 @@
                  	<h2>Будьте в курсе</h2>
                  	<span>Новости, обзоры и акции</span>
                  	<input id="subscription_email" type="text" value="Ваш Email">
-                 	<div>Подписаться</div>
+                 	<a href="#">Подписаться</a>
         		</div>
         	</div>
 
@@ -116,7 +115,12 @@
 					<p>Данный сайт является демо-версией готового интернет-магазина электроинструментов для 1С-Битрикс. Вся информация на сайте не является офертой, а служит лишь примером наполнения для ознакомления с возможностями решения.</p>
         		    <p>Интернет-магазин выполняет доставку любого товара своей собственной Службой доставки.</p>
         		    <p><h2>Стоимость доставки курьером</h2>Стоимость доставки товара из нашего магазина - 500 руб, при условии выбора при заказе товара в качестве способа доставки нашим курьером.</p>
-        		    <p><strong>Внимание!</strong> Неправильно указанный номер телефона, неточный или неполный адрес могут привести к дополнительной задержке! Пожалуйста, внимательно проверяйте Ваши персональные данные при регистрации и оформлении заказа.Конфиденциальность ваших регистрационных данных гарантируется.					Доставка выполняется ежедневно с 10:00 до 20:00 часов, в субботу с 10:00 до 14:00, в воскресенье доставки нет. Товары, заказанные Вами в субботу и воскресенье, доставляются в понедельник. Время осуществления доставки зависит от времени размещения заказа и наличия товара на складе:					если заказ подтвержден менеджером Службы доставки до 12:00, товар может быть доставлен на следующий рабочий день между 10:00 и 15:00 или между 15:00 и 20:00;					если заказ подтвержден менеджером Службы доставки после 12:00, товар может быть доставлен на следующий рабочий день между 15:00 и 18:00.					Вы также можете указать любое другое удобное время доставки, и покупка будет доставлена в удобное Вам время. Иное время доставки, а также время доставки в населенные пункты области определяется по договоренности с клиентом.					</p>
+        		    <p><strong>Внимание!</strong> Неправильно указанный номер телефона, неточный или неполный адрес могут привести к дополнительной задержке! Пожалуйста, внимательно проверяйте Ваши персональные данные при регистрации и оформлении заказа.Конфиденциальность ваших регистрационных данных гарантируется.
+					Доставка выполняется ежедневно с 10:00 до 20:00 часов, в субботу с 10:00 до 14:00, в воскресенье доставки нет. Товары, заказанные Вами в субботу и воскресенье, доставляются в понедельник. Время осуществления доставки зависит от времени размещения заказа и наличия товара на складе:
+					если заказ подтвержден менеджером Службы доставки до 12:00, товар может быть доставлен на следующий рабочий день между 10:00 и 15:00 или между 15:00 и 20:00;
+					если заказ подтвержден менеджером Службы доставки после 12:00, товар может быть доставлен на следующий рабочий день между 15:00 и 18:00.
+					Вы также можете указать любое другое удобное время доставки, и покупка будет доставлена в удобное Вам время. Иное время доставки, а также время доставки в населенные пункты области определяется по договоренности с клиентом.
+					</p>
 					<p><h2>Служба доставки: +7 (495) 000 05 06</h2></p>
         		</ul>
 
@@ -127,7 +131,9 @@
 		<div id="footer_content" class="c_pos">
         	<div id="contact_data" class="contact_data">
            		© MAKnails 2015<br><br>
-                Москва,<br>				4-я улица Марьиной Рощи,<br>				д.12а, 2 этаж, павильон 149
+                Москва,<br>
+				4-я улица Марьиной Рощи,<br>
+				д.12а, 2 этаж, павильон 149
         	</div>
         	<div id="footer" class="footer">
         		<nav>
