--- a/goood.html
+++ b/goood.html
@@ -11,7 +11,6 @@
 	    <script src="js/login_form.js"></script>
         <script src="js/catalog.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
     <body>
         <!--<div style="position:absolute;width:1980px;height:1080px;background:url('images/main.png');opacity: 0.5;margin-left:64px;"></div>-->
@@ -108,7 +107,7 @@
                  	<h2>Будьте в курсе</h2>
                  	<span>Новости, обзоры и акции</span>
                  	<input id="subscription_email" type="text" value="Ваш Email">
-                 	<div>Подписаться</div>
+                 	<a href="#">Подписаться</a>
         		</div>
         	</div>
 
@@ -323,7 +322,7 @@
                     <div class="item-other-color"> 
         			<div class="item" style="background-image:url('images/test_item.png')">
                     	<div class="doods_item_data">
-                        	<a href="#">Увлажнаяющий крем для рук</a>
+                        	<a href="#">CND VINYLUX,<br>ЦВЕТ STRAWBERRY SMOOTHIE</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
                     	</div>
 
@@ -336,7 +335,7 @@
 
         			<div class="item" style="background-image:url('images/test_item.png')">
                     	<div class="doods_item_data">
-                        	<a href="#">Увлажнаяющий крем для рук</a>
+                        	<a href="#">CND VINYLUX,<br>ЦВЕТ STRAWBERRY SMOOTHIE</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
                     	</div>
 
@@ -349,7 +348,7 @@
 
         			<div class="item" style="background-image:url('images/test_item.png')">
                     	<div class="doods_item_data">
-                        	<a href="#">Увлажнаяющий крем <br>для рук</a>
+                        	<a href="#">CND VINYLUX,<br>ЦВЕТ STRAWBERRY SMOOTHIE</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
                     	</div>
 
@@ -363,7 +362,7 @@
 
         			<div class="item" style="background-image:url('images/test_item.png')">
                     	<div class="doods_item_data">
-                        	<a href="#">Увлажнаяющий крем для рук</a>
+                        	<a href="#">CND VINYLUX,<br>ЦВЕТ STRAWBERRY SMOOTHIE</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
                     	</div>
 
