--- a/news.html
+++ b/news.html
@@ -10,7 +10,6 @@
 	    <script src="js/news.js"></script>
 	    <script src="js/login_form.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
     <body>
      <!--<div style="position:absolute;width:1980px;height:1080px;background:url('images/main.png');opacity: 0.5;margin-left:64px;"></div>-->
@@ -107,7 +106,7 @@
                  	<h2>Будьте в курсе</h2>
                  	<span>Новости, обзоры и акции</span>
                  	<input id="subscription_email" type="text" value="Ваш Email">
-                 	<div>Подписаться</div>
+                 	<a href="#">Подписаться</a>
         		</div>
         	</div>
 
@@ -119,7 +118,8 @@
                 <h2 id="news_header">Новости</h2>
                 <ul id="news_content">
 
-                	<li><span>2 октября 2014</span><a href="#">Приглашаем мастеров ногтевого сервиса в магазин «MAKnails» на обзорный семинар по продукции Alessar					магазин «MAKnails» на обзорный семинар по продукции Alessar</a></li>
+                	<li><span>2 октября 2014</span><a href="#">Приглашаем мастеров ногтевого сервиса в магазин «MAKnails» на обзорный семинар по продукции Alessar
+					магазин «MAKnails» на обзорный семинар по продукции Alessar</a></li>
 
                 	<li><span>2 октября 2014</span><a href="#">Приглашаем мастеров ногтевого сервиса в магазин «MAKnails» на обзорный семинар по продукции Alessar
 					магазин «MAKnails» на обзорный семинар по продукции Alessar</a></li>
@@ -145,7 +145,9 @@
 		<div id="footer_content" class="c_pos">
         	<div id="contact_data" class="contact_data">
            		© MAKnails 2015<br><br>
-                Москва,<br>				4-я улица Марьиной Рощи,<br>				д.12а, 2 этаж, павильон 149
+                Москва,<br>
+				4-я улица Марьиной Рощи,<br>
+				д.12а, 2 этаж, павильон 149
         	</div>
         	<div id="footer" class="footer">
         		<nav>
