--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,6 @@
 	    <script src="js/login_form.js"></script>
 	    <script src="js/profile.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
     <body>
      <!--<div style="position:absolute;width:1980px;height:1080px;background:url('images/main.png');opacity: 0.5;margin-left:64px;"></div>-->
@@ -123,7 +122,7 @@
                  	<h2>Будьте в курсе</h2>
                  	<span>Новости, обзоры и акции</span>
                  	<input id="subscription_email" type="text" value="Ваш Email">
-                 	<div>Подписаться</div>
+                 	<a href="#">Подписаться</a>
         		</div>
         	</div>
 
@@ -158,7 +157,9 @@
 		<div id="footer_content" class="c_pos">
         	<div id="contact_data" class="contact_data">
            		© MAKnails 2015<br><br>
-                Москва,<br>				4-я улица Марьиной Рощи,<br>				д.12а, 2 этаж, павильон 149
+                Москва,<br>
+				4-я улица Марьиной Рощи,<br>
+				д.12а, 2 этаж, павильон 149
         	</div>
         	<div id="footer" class="footer">
         		<nav>
