--- a/single_brand.html
+++ b/single_brand.html
@@ -9,7 +9,6 @@
 	    <script src="js/brand.js"></script>
 	    <script src="js/login_form.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
     <body>
         <!--<div style="position:absolute;width:1980px;height:1080px;background:url('images/main.png');opacity: 0.5;margin-left:64px;"></div>-->
@@ -106,7 +105,7 @@
                  	<h2>Будьте в курсе</h2>
                  	<span>Новости, обзоры и акции</span>
                  	<input id="subscription_email" type="text" value="Ваш Email">
-                 	<div>Подписаться</div>
+                 	<a href="#">Подписаться</a>
         		</div>
         	</div>
 
@@ -125,7 +124,9 @@
                 	</div>
 
                 	<div id="brand_text">
-Компания alessandro International была основана Сильвией Троска в 1989 году. Признание на профессиональном рынке продукция получила благодаря инновационной технологии – использование UV-отверждаемых гелей для наращивания и моделирования ногтей. С тех пор каждый год компания выпускает  как минимум один новый продукт, каждый из которых получает всемирную известность, поэтому доверие к бренду продолжает расти.<br><br>Для команды alessandro очень важно оставаться в постоянном поиске инноваций, компания неизменно подтверждает свой статус профессионалов и всегда предлагает своим клиентам только лучшие и актуальные продукты и тенденции. Продукты alessandro International трижды становились обладателем премии Beauty Awards - самой престижной премии в мировой индустрии красоты.
+Компания alessandro International была основана Сильвией Троска в 1989 году. Признание на профессиональном рынке продукция получила благодаря инновационной технологии – использование UV-отверждаемых гелей для наращивания и моделирования ногтей. С тех пор каждый год компания выпускает  как минимум один новый продукт, каждый из которых получает всемирную известность, поэтому доверие к бренду продолжает расти.
+<br><br>
+Для команды alessandro очень важно оставаться в постоянном поиске инноваций, компания неизменно подтверждает свой статус профессионалов и всегда предлагает своим клиентам только лучшие и актуальные продукты и тенденции. Продукты alessandro International трижды становились обладателем премии Beauty Awards - самой престижной премии в мировой индустрии красоты.
                 	</div>
                 </div>
 
