--- a/basket.html
+++ b/basket.html
@@ -9,7 +9,6 @@
 	    <script src="js/basket.js"></script>
 	    <script src="js/login_form.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
     <body>
         <!--<div style="position:absolute;width:1980px;height:1080px;background:url('images/main.png');opacity: 0.5;margin-left:64px;"></div>-->
@@ -106,7 +105,7 @@
                  	<h2>Будьте в курсе</h2>
                  	<span>Новости, обзоры и акции</span>
                  	<input id="subscription_email" type="text" value="Ваш Email">
-                 	<div>Подписаться</div>
+                 	<a href="#">Подписаться</a>
         		</div>
         	</div>
 
@@ -136,7 +135,8 @@
                         		<td class="cart_image"><img src="images/cart_test_image.png"></td>
                         		<td class="cart_text">
                         			<a>Masura, цвет not too much</a>
-                        			<span>Ярко-алый без блесток<br>									и перламутра, плотный</span>
+                        			<span>Ярко-алый без блесток<br>
+									и перламутра, плотный</span>
                         		</td>
                         		<td class="cart_cost">
                         			<span>659</span>
