--- a/main.html
+++ b/main.html
@@ -9,7 +9,6 @@
 	    <script src="js/main_item_jq.js"></script>
 	    <script src="js/login_form.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
     <body>
      <!--<div style="position:absolute;width:1980px;height:1080px;background:url('images/main.png');opacity: 0.5;margin-left:64px;"></div>-->
@@ -20,13 +19,13 @@
         		</span>
         	</div>
             <div id="header">
-             	<input type="text" id="search" class="search" value="Найти в каталоге">
+             	<input type="text" id="search" class="search" placeholder="Найти в каталоге">
              	<div id="720_menu">
              		<a href="#" id="catalog_720">Каталог</a>
              		<a href="#" id="menu_720">Меню</a>
              	</div>
              	<div id="phone" class="phone">
-					8 <span>(</span>800<span>)</span> 25-05-149,  <span>+</span>7 <span>(</span>916<span>)</span> 512-47-91
+					<span>+</span> 7<span>(</span>495<span>)</span> 974-11-28,  <span>+</span>7 <span>(</span>495<span>)</span> 600-65-42
              	</div>
              	<nav>
              		<ul id="top_menu" class="top_menu">
@@ -105,8 +104,8 @@
         		<div id="subscription" class="subscription">
                  	<h2>Будьте в курсе</h2>
                  	<span>Новости, обзоры и акции</span>
-                 	<input id="subscription_email" type="text" value="Ваш Email">
-                 	<div>Подписаться</div>
+                 	<input id="subscription_email" type="text" placeholder="Ваш Email">
+                 	<a href="#">Подписаться</a>
         		</div>
         	</div>
 
@@ -149,7 +148,32 @@
                 <div class="clear"></div>
 
                 <div id="items">
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                        <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
+                        
+                    	<div class="item_data">
+                        	<a href="#">Увлажнаяющий крем для рук</a>
+                        	<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, deleniti consequuntur officiis expedita cupiditate esse ea similique exercitationem </span>
+                    	</div>
+
+                        <div class="cost">
+                        	<span>123</span>
+                        	<div class="cnt"></div>
+                        	<div class="buy">Купить</div>
+                        </div>
+
+                         <div class="item_ico" style="background:url('images/item_ico_1.png')"></div>
+                         <div class="item_ico" style="background:url('images/item_ico_2.png')"></div>
+                         <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
+                    </div>
+
+
+        			<div class="item">
+                        <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -166,8 +190,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -184,7 +210,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -201,7 +230,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -218,7 +250,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -235,7 +270,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -252,7 +290,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -269,7 +310,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -286,7 +330,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -303,7 +350,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -320,7 +370,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -337,7 +390,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -354,7 +410,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -371,7 +430,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -388,7 +450,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
@@ -405,24 +470,10 @@
                          <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
                     </div>
 
-        			<div class="item" style="background-image:url('images/test_item.png')">
-                    	<div class="item_data">
-                        	<a href="#">Увлажнаяющий крем для рук</a>
-                        	<span>Нержавеющая сталь, ручное изготовление</span>
-                    	</div>
-
-                        <div class="cost">
-                        	<span>123</span>
-                        	<div class="cnt"></div>
-                        	<div class="buy">Купить</div>
-                        </div>
-
-                         <div class="item_ico" style="background:url('images/item_ico_1.png')"></div>
-                         <div class="item_ico" style="background:url('images/item_ico_2.png')"></div>
-                         <div class="item_ico" style="background:url('images/item_ico_3.png')"></div>
-                    </div>
-
-        			<div class="item" style="background-image:url('images/test_item.png')">
+        			<div class="item">
+                    <a href="#" class="item-img-link">
+                            <img src="images/test_item.png" alt="" width="237" >
+                        </a>
                     	<div class="item_data">
                         	<a href="#">Увлажнаяющий крем для рук</a>
                         	<span>Нержавеющая сталь, ручное изготовление</span>
