--- a/zakaz.html
+++ b/zakaz.html
@@ -10,7 +10,6 @@
         <script src="js/profile.js"></script>
         <script src="js/main.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
     </head>
     <body>
      <!--<div style="position:absolute;width:1980px;height:1080px;background:url('images/main.png');opacity: 0.5;margin-left:64px;"></div>-->
@@ -124,7 +123,7 @@
                     <h2>Будьте в курсе</h2>
                     <span>Новости, обзоры и акции</span>
                     <input id="subscription_email" type="text" value="Ваш Email">
-                    <div>Подписаться</div>
+                    <a href="#">Подписаться</a>
                 </div>
             </div>
 
