--- a/brands.html
+++ b/brands.html
@@ -25,8 +25,8 @@
              		<a href="#" id="menu_720">Меню</a>
              	</div>
              	<div id="phone" class="phone">
-					8 <span>(</span>800<span>)</span> 25-05-149,  <span>+</span>7 <span>(</span>916<span>)</span> 512-47-91
-             	</div>
+                    <span>+</span> 7<span>(</span>495<span>)</span> 974-11-28,  <span>+</span>7 <span>(</span>495<span>)</span> 600-65-42
+                </div>
              	<nav>
              		<ul id="top_menu" class="top_menu">
              			<li><a href="#">Главная</a></li>
@@ -215,13 +215,13 @@
 	        		</ul>
                 </nav>
         		<ul id="smm_buttons">
-        			<li><a href="" class="mail smm_button"></a></li>
-        			<li><a href="" class="od smm_button"></a></li>
-        			<li><a href="" class="tv smm_button"></a></li>
-        			<li><a href="" class="fb smm_button"></a></li>
-        			<li><a href="" class="vk smm_button"></a></li>
-        			<li>Мы с вами</li>
-        		</ul>
+                    <li><a href="" class="pen smm_button"></a></li>
+                    <li><a href="" class="twitter smm_button"></a></li>
+                    <li><a href="" class="facebook smm_button"></a></li>
+                    <li><a href="" class="vkontakte smm_button"></a></li>
+
+                    <li>Мы с вами</li>
+                </ul>
         	</div>
 		</div>
 
