--- a/main.html
+++ b/main.html
@@ -513,11 +513,11 @@
 	        		</ul>
                 </nav>
         		<ul id="smm_buttons">
-        			<li><a href="" class="mail smm_button"></a></li>
-        			<li><a href="" class="od smm_button"></a></li>
-        			<li><a href="" class="tv smm_button"></a></li>
-        			<li><a href="" class="fb smm_button"></a></li>
-        			<li><a href="" class="vk smm_button"></a></li>
+                    <li><a href="" class="pen smm_button"></a></li>
+                    <li><a href="" class="twitter smm_button"></a></li>
+                    <li><a href="" class="facebook smm_button"></a></li>
+        			<li><a href="" class="vkontakte smm_button"></a></li>
+
         			<li>Мы с вами</li>
         		</ul>
         	</div>
