--- a/goood.html
+++ b/goood.html
@@ -139,9 +139,15 @@
                 	<div id="good_info">
                           <div id="goods_info_images">
                           	   <div id="goods_arrow"></div>
-                               <img src="images/goods_image_small.png"/>
-                               <img src="images/goods_image_small.png"/>
-                               <img src="images/goods_image_small.png"/>
+                               <div class="mini-img">
+                                   <img src="images/goods_image_small.png" alt="">
+                               </div>
+                               <div class="mini-img">
+                                   <img src="images/slide-2.jpg" alt="" width="150" height="150">
+                               </div>
+                               <div class="mini-img">
+                                   <img src="images/goods_image_small.png" alt="">
+                               </div>
                           </div>
 
                           <div id="good_data_cost">
