--- a/goood.html
+++ b/goood.html
@@ -10,6 +10,7 @@
 	    <script src="js/goods.js"></script>
 	    <script src="js/login_form.js"></script>
         <script src="js/catalog.js"></script>
+        <script src="js/carousel.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
     <body>
@@ -139,14 +140,27 @@
                 	<div id="good_info">
                           <div id="goods_info_images">
                           	   <div id="goods_arrow"></div>
-                               <div class="mini-img">
-                                   <img src="images/goods_image_small.png" alt="">
-                               </div>
-                               <div class="mini-img">
-                                   <img src="images/slide-2.jpg" alt="" width="150" height="150">
-                               </div>
-                               <div class="mini-img">
-                                   <img src="images/goods_image_small.png" alt="">
+                               <div class="carousel-wrapper">
+                                    <div class="carousel-items"> 
+                                       <div class="carousel-block">
+                                           <img src="images/goods_image_small.png" alt="">
+                                       </div>
+                                       <div class="carousel-block">
+                                           <img src="images/slide-2.jpg" alt="" width="150" height="150">
+                                       </div>
+                                       <div class="carousel-block">
+                                           <img src="images/goods_image_small.png" alt="">
+                                       </div>
+                                       <div class="carousel-block">
+                                           <img src="images/goods_image_small.png" alt="">
+                                       </div>
+                                       <div class="carousel-block">
+                                           <img src="images/goods_image_small.png" alt="">
+                                       </div>
+                                       <div class="carousel-block">
+                                           <img src="images/goods_image_small.png" alt="">
+                                       </div>
+                                   </div>
                                </div>
                           </div>
 
